k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arabic-dict-service
spec:
  selector:
    app: arabic-dict-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
